--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     			<h3 class="w3-wide"><b>LOGO</b></h3>
   			</div>
             <div class="w3-padding-32 w3-large w3-text-grey">
-                <a href="#t-shirts" class="w3-bar-item w3-button">2020 Release</a>
+                <a href="#t-shirts" class="w3-bar-item w3-button" onclick="w3_close();">2020 Release</a>
 				<a href="#" class="w3-bar-item w3-button">About Us</a>
 				<a href="#" class="w3-bar-item w3-button">Contact</a>
             </div>
